logs/dag_id=api_dag/run_id=manual__2023-04-09T00:29:48.109385+00:00/task_id=create_table/attempt=1.log
[2023-04-09T00:29:49.803+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: api_dag.create_table manual__2023-04-09T00:29:48.109385+00:00 [queued]>
[2023-04-09T00:29:49.810+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: api_dag.create_table manual__2023-04-09T00:29:48.109385+00:00 [queued]>
[2023-04-09T00:29:49.811+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-04-09T00:29:49.812+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 2
[2023-04-09T00:29:49.813+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-04-09T00:29:49.821+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2023-04-09 00:29:48.109385+00:00
[2023-04-09T00:29:49.829+0000] {standard_task_runner.py:55} INFO - Started process 9496 to run task
[2023-04-09T00:29:49.835+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'api_dag', 'create_table', 'manual__2023-04-09T00:29:48.109385+00:00', '--job-id', '51', '--raw', '--subdir', 'DAGS_FOLDER/api.py', '--cfg-path', '/tmp/tmp5413e95s']
[2023-04-09T00:29:49.839+0000] {standard_task_runner.py:83} INFO - Job 51: Subtask create_table
[2023-04-09T00:29:49.935+0000] {task_command.py:376} INFO - Running <TaskInstance: api_dag.create_table manual__2023-04-09T00:29:48.109385+00:00 [running]> on host c12a518d534c
[2023-04-09T00:29:49.989+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=api_dag
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-04-09T00:29:48.109385+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-09T00:29:48.109385+00:00
[2023-04-09T00:29:49.999+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-04-09T00:29:50.007+0000] {sql.py:315} INFO - Running statement: CREATE TABLE IF NOT EXISTS user_details (
    firstname VARCHAR NOT NULL,
    lastname VARCHAR NOT NULL,);, parameters: None
[2023-04-09T00:29:50.009+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 3:     lastname VARCHAR NOT NULL,);
                                      ^

[2023-04-09T00:29:50.019+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=api_dag, task_id=create_table, execution_date=20230409T002948, start_date=20230409T002949, end_date=20230409T002950
[2023-04-09T00:29:50.026+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 51 for task create_table (syntax error at or near ")"
LINE 3:     lastname VARCHAR NOT NULL,);
                                      ^
; 9496)
[2023-04-09T00:29:50.046+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-04-09T00:29:50.069+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
